--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
     "add": "^2.0.6",
+    "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
@@ -21,6 +22,8 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.13.0",
+    "react-simple-captcha": "^9.0.17",
+    "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^9.4.1"
   },
